# Stock-Market-Intelligence

./: .gitignore  API_DOCUMENTATION.md  API_SETUP.md  CHAT_EXPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.txt  README.md  UI_IMPLEMENTATION_GUIDE.md  debug_sentiment.py  env.example  main_orchestrator.py  market_overview.json  package-lock.json  portfolio_analysis.json  pyproject.toml  quick_start.py  requirements.txt  run_api.sh
.github/: dependabot.yml
.github/workflows/: npm-publish.yml  python-publish.yml
analysis/: signal_engine.py
api/: database.py  main.py  main.py.backup
database/: __init__.py  models.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  index.css  store.js
frontend/src/components/: Dashboard.css  Dashboard.js  Header.jsx  Layout.js  Navbar.css  Navbar.js  Sidebar.jsx  SignalCard.js
frontend/src/components/globe/: GlobeView.jsx
frontend/src/components/map/: GeoMapView.jsx
frontend/src/components/portfolio/: PortfolioView.jsx
frontend/src/components/signals/: SignalsView.jsx
frontend/src/data/: globe.js  signals.js
frontend/src/pages/: DashboardPage.js  MarketPage.js  PortfolioPage.js  SignalsPage.js  TickerPage.js
nlp/: sentiment_analyzer.py
scraper/: news_scraper.py
